--- a/views/admin-lte/sidebar.ejs
+++ b/views/admin-lte/sidebar.ejs
@@ -7,8 +7,8 @@
                     <span>{{category.category}}</span>
                     <i ng-show="(category.subCategories.length)" class="fa fa-angle-left pull-right"></i>
                 </a>
-                <ul class="treeview-menu" ng-show="(category.subCategories.length)" >
-                    <li ng-repeat="subCategory in category.subCategories" on-finish-render="sidebarInit"><a href="#">{{subCategory}}</a></li>
+                <ul class="treeview-menu" ng-show="(category.subCategories.length)" on-finish-render="sidebarInit">
+                    <li ng-repeat="subCategory in category.subCategories" ><a href="#">{{subCategory.category}}</a></li>
                 </ul>
             </li>
         </ul>
