--- a/views/admin-lte/catalogs/course2.ejs
+++ b/views/admin-lte/catalogs/course2.ejs
@@ -3,23 +3,8 @@
 
     <!-- Header Navbar -->
     <% include ../mainMenu %>
-    <aside class="main-sidebar" ng-controller="CategoryListController as categoryList">
-        <section class="sidebar">
-            <ul class="sidebar-menu">
-                <li class="header">CATEGORIES</li>
-                <li ng-repeat="category in categories.categories" class="treeview">
-                    <a href="#">
-                        <span>{{category.category}}</span>
-                        <i ng-show="(category.subCategories.length)" class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu" ng-show="(category.subCategories.length)" >
-                        <li ng-repeat="subCategory in category.subCategories" on-finish-render="sidebarInit"><a href="#">{{subCategory}}</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
-        <!-- /.sidebar -->
-    </aside>
+    <% include ../sidebar %>
+
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
