--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -15,7 +15,8 @@
                         <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-generic" data-slide-to="1" class=""></li>
                     </ol>
-                    <a class="btn btn-block btn-primary btn-flat btn-slide">Start a course map!</a>
+                    <a class="btn btn-block btn-primary btn-flat btn-slide hidden-xs">Start a course map!</a>
+
                     <div class="carousel-inner">
                         <div class="item active">
                             <img src="/img/sliders/slider_3.png" alt="">
@@ -39,16 +40,16 @@
                         <span class="fa fa-angle-right"></span>
                     </a>
                 </div>
-
+                <a class="btn btn-block btn-primary btn-flat visible-xs">Start a course map!</a>
             </div>
         </div>
 
         <!-- Main content -->
         <section class="content" ng-controller="CategoryListController as categoryList">
 
-            <div class="container_">
+            <div class="container">
                 <div class="row row-centered">
-                    <div class="col-xs-4 col-centered">
+                    <div class="col-sm-6 col-lg-6 col-centered">
                         <div class="text-center">
                             <h1>Welcome to CourseMapper,
                                 let's start by going through our categories
@@ -57,34 +58,40 @@
                     </div>
                 </div>
                 <div class="row row-centered">
-                    <div class="col-xs-9 col-centered">
+                    <div class="col-xs-12 col-lg-9 col-centered">
                         <div class="content">
-                            <div class="col-xs-4" ng-repeat="category in categories.categories">
+                            <div class="col-xs-12 col-sm-4 col-lg-4" ng-repeat="category in categories.categories">
                                 <div class="box box-solid">
                                     <div class="box-header with-border">
-                                        <h3 class="box-title"><a href="/catalogs/courses/category/{{category.slug}}">{{category.category}}</a></h3>
+                                        <h3 class="box-title"><a href="/catalogs/courses/category/{{category.slug}}">{{category.category}}</a>
+                                        </h3>
                                     </div>
                                     <!-- /.box-header -->
-                                    <div class="box-body clearfix">
-                                        <img src="/img/category_placeholder.png" style="width: 100%">
-                                        <br>
-                                        20 courses available
+                                    <div class="box-body clearfix hidden-xs">
+                                        <img class="hidden-xs" src="/img/category_placeholder.png" style="width: 100%"
+                                             alt="category picture">
                                     </div>
                                     <!-- /.box-body -->
+                                    <div class="box-footer no-border">
+                                        20 courses available
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-xs-4" ng-repeat="category in categories.categories">
+                            <div class="col-xs-12 col-sm-4 col-lg-4" ng-repeat="category in categories.categories">
                                 <div class="box box-solid">
                                     <div class="box-header with-border">
-                                        <h3 class="box-title">{{category.category}}</h3>
+                                        <h3 class="box-title"><a href="/catalogs/courses/category/{{category.slug}}">{{category.category}}</a>
+                                        </h3>
                                     </div>
                                     <!-- /.box-header -->
-                                    <div class="box-body clearfix">
-                                        <img src="/img/category_placeholder.png" style="width: 100%">
-                                        <br>
-                                        20 courses available
+                                    <div class="box-body clearfix hidden-xs">
+                                        <img class="hidden-xs" src="/img/category_placeholder.png" style="width: 100%"
+                                             alt="category picture">
                                     </div>
                                     <!-- /.box-body -->
+                                    <div class="box-footer no-border">
+                                        20 courses available
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -92,7 +99,7 @@
                 </div>
 
                 <div class="row row-centered">
-                    <div class="col-xs-4 col-centered">
+                    <div class="col-lg-4 col-centered">
                         <div class="text-center">
                             <h1>Or browse through our tag cloud:
                             </h1>
