--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -13,66 +13,83 @@
                 <li><a href="/catalogs/courses"> </i> Courses</a></li>
                 <li><a href="/catalogs/courses"> </i> I.T</a></li>
                 <li>Web Tech</li>
-                <li class="active">Map</li>
+                <li class="active">Dashboard</li>
             </ol>
         </section>
 
-        <!-- /.modal-content -->
-        <div id="rightClick" class="hide" ng-controller="RightClickMenuController as rc">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <ul class="nav nav-pills nav-stacked">
-                            <li><a href="javascript:;" ng-click="createTopic('Web Tech')"> Create Topic </a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div><!-- /.modal-content -->
-
         <!-- Main content -->
-        <script src="/d3/d3.min.js"></script>
-        <section class="content" id="tree" ng-controller="TreeController as treeCtrl">
+        <section class="content">
             <div class="box no-border" style="min-height:640px;">
                 <div class="box-header no-border">
-                    <a class="btn btn-block btn-primary btn-flat follow">Follow</a>
                     <h1>Web Tech</h1>
+                    <a class="btn btn-primary btn-flat">Follow</a>
                 </div>
                 <div class="box-body no-border">
-                    <div class="col-xs-3">
-                        <img style=" " src="/img/zoom.png" />
-                        <br style="clear: both">
-                        <img style=" width: 250px" src="/img/minimap.png" />
+
+                    <!-- tabs left -->
+                    <div class="tabbable tabs-left">
+                        <ul class="nav nav-tabs">
+                            <li class="active"><a href="#preview" data-toggle="tab">
+                                <i class="ionicons ion-social-buffer-outline"></i>
+                                Preview</a></li>
+                            <li><a href="#updates" ng-show="user" data-toggle="tab">
+                                <i class="ionicons ion-ios-time-outline"></i>
+                                Updates</a></li>
+                            <li><a href="#discussion" ng-show="user" data-toggle="tab">
+                                <i class="ionicons ionicons ion-ios-chatboxes-outline"></i>
+                                Discussion</a></li>
+                            <li><a href="#analytics" ng-show="user" data-toggle="tab">
+                                <i class="ionicons ion-stats-bars"></i>
+                                Analytics</a></li>
+                        </ul>
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="preview">
+
+                                <div class="col-xs-9">
+                                    <div class="form-group">
+                                        Started By: <strong>Ridho Laksono</strong> on <b> 02/09/2014</b> -
+                                        Last activity:<b> 2 days ago</b><br>
+                                        User Rating:
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star-o"></i>
+                                    </div>
+                                    <a href="/catalogs/web-tech"><img src="/img/minitree.png"></a>
+                                    <div class="form-group">
+                                    The things that are related to Web Tech
+                                </div>
+                                    <div class="form-group">
+                                        <!-- general public analytics about this course -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="dashboard">
+
+                            </div>
+                            <div class="tab-pane" id="discussion"></div>
+                            <div class="tab-pane" id="updates"></div>
+                            <div class="tab-pane" id="analytics"></div>
+                        </div>
                     </div>
-                    <div class="col-xs-9">
-                    <img style="float: left;" src="/img/_test_1.png" />
-                    </div>
+                    <!-- /tabs -->
+
                 </div>
             </div>
 
 
-            <a href="/catalogs/web-tech2" class="linkingVideo video1"></a>
-
-            <a data-toggle="modal" data-target="#modalPdf" class="linkingPdf pdf1"></a>
-            <a data-toggle="modal" data-target="#modalPdf" class="linkingPdf pdf2"></a>
-            <a data-toggle="modal" data-target="#modalPdf" class="linkingPdf pdf3"></a>
-            <a data-toggle="modal" data-target="#modalPdf" class="linkingPdf pdf4"></a>
-
-        </section><!-- /.content -->
-    </div><!-- /.content-wrapper -->
+        </section>
+        <!-- /.content -->
+    </div>
+    <!-- /.content-wrapper -->
 
 </div><!-- ./wrapper -->
-
-<div id="modalPdf" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="modalPdfLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-<img src="/img/pdf.jpg" style=" width: 100%;" onclick="$('#modalPdf').modal('hide');" />
-        </div>
-    </div>
-</div>
 
 
 <% include ../jsfooter %>
 <script>
+    $(document).ready(function () {
+    });
 </script>
 <% include ../footer %>
