--- a/views/admin-lte/catalogs/courses.ejs
+++ b/views/admin-lte/catalogs/courses.ejs
@@ -30,7 +30,7 @@
                     <div class="form_hover">
                         <div class="box box-primary peekCourse">
                             <div class="box-header with-border">
-                                <a href="/catalogs/course/web-tech" class="box-title">{{c.course}}</a>
+                                <a href="/catalogs/course/{{c._id}}" class="box-title">{{c.course}}</a>
                             </div>
                             <div class="box-body"  style="text-align: center" >
                             <img src="/img/default-tree.png">
@@ -41,7 +41,7 @@
                             <div class="blur"></div>
                             <div class="box box-primary caption-text">
                                 <div class="box-header with-border">
-                                    <a href="/catalogs/course/web-tech" class="box-title">{{c.course}}</a>
+                                    <a href="/catalogs/course/{{c._id}}" class="box-title">{{c.course}}</a>
                                 </div>
                                 <div class="box-body">
                                     <div class="form-group">
@@ -58,7 +58,7 @@
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star-o"></i>
                                     </div>
-                                    <a class="btn btn-primary" href="/catalogs/course/web-tech"><i class=""></i> Go to course</a>
+                                    <a class="btn btn-primary" href="/catalogs/course/{{c._id}}"><i class=""></i> Go to course</a>
                                 </div>
                             </div>
                         </div>
