admin can add courses

--- a/views/admin-lte/cm-admin/sidebar.ejs
+++ b/views/admin-lte/cm-admin/sidebar.ejs
@@ -4,7 +4,7 @@
         <ul class="sidebar-menu">
             <li class="treeview">
                 <a href="#">
-                    <span>hahaha</span>
+                    <span> </span>
                 </a>
             </li>
         </ul>
