--- a/views/admin-lte/catalogs/course1.ejs
+++ b/views/admin-lte/catalogs/course1.ejs
@@ -25,7 +25,7 @@
                         <ul class="nav nav-pills nav-stacked">
                             <li><a href="javascript:;" ng-click="createTopic('Web Tech')"> Create Topic </a></li>
                         </ul>
-                    </div>\
+                    </div>
                 </div>
             </div>
         </div><!-- /.modal-content -->
@@ -35,7 +35,6 @@
         <section class="content" id="tree" ng-controller="TreeController as treeCtrl">
             <div class="box no-border" style="min-height:640px;">
                 <div class="box-header no-border">
-                    <a class="btn btn-block btn-primary btn-flat follow">Follow</a>
                     <h1>Web Tech</h1>
                 </div>
                 <div class="box-body no-border">
